--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "author": "Cong Min",
   "license": "cc-by-sa-4.0",
-  "homepage": "https://yuzijun.com",
+  "homepage": "https://yuzijun.cn",
   "devDependencies": {
     "less": "^4.1.3",
     "prettier": "2.8.2",
