--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "vite",
-    "build": "npm run prettier && tsc && vite build",
+    "build": "npm run prettier && tsc && vite build && npm run pdf",
+    "watch": "node watch-simple.js",
+    "pdf": "node html-to-pdf.js",
     "preview": "vite preview",
     "prettier": "prettier --write ./src"
   },
@@ -18,8 +20,10 @@
   "license": "cc-by-sa-4.0",
   "homepage": "https://yuzijun.cn",
   "devDependencies": {
+    "chokidar": "^4.0.3",
     "less": "^4.1.3",
     "prettier": "2.8.2",
+    "puppeteer": "^24.36.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-html": "^3.2.0",
