--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "prettier": "prettier --write ./src"
   },
   "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/cong-min/resume.git"
+    "type": "git"
   },
-  "author": "Cong Min",
+  "author": "Jackie Yu",
   "license": "cc-by-sa-4.0",
   "homepage": "https://yuzijun.cn",
   "devDependencies": {
     "chokidar": "^4.0.3",
+    "dotenv": "^17.2.3",
     "less": "^4.1.3",
     "prettier": "2.8.2",
     "puppeteer": "^24.36.1",
@@ -28,5 +28,8 @@
     "vite": "^4.0.0",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-singlefile": "^0.13.2"
+  },
+  "dependencies": {
+    "ali-oss": "^6.23.0"
   }
 }
